--- a/app.config
+++ b/app.config
@@ -51,27 +51,6 @@
 
     <userSettings>
         <ClipGeo.My.MySettings>
-            <setting name="profilename" serializeAs="String">
-                <value>Select Profile</value>
-            </setting>
-            <setting name="mintakendate" serializeAs="String">
-                <value>2000-01-01</value>
-            </setting>
-            <setting name="maxtakendate" serializeAs="String">
-                <value>2000-01-01</value>
-            </setting>
-            <setting name="minuploaddate" serializeAs="String">
-                <value>2000-01-01</value>
-            </setting>
-            <setting name="maxuploaddate" serializeAs="String">
-                <value>2000-01-01</value>
-            </setting>
-            <setting name="lat" serializeAs="String">
-                <value>37.86941689</value>
-            </setting>
-            <setting name="lng" serializeAs="String">
-                <value>-122.2786765</value>
-            </setting>
             <setting name="bottomleftlat" serializeAs="String">
                 <value>0</value>
             </setting>
@@ -83,6 +62,12 @@
             </setting>
             <setting name="toprightlong" serializeAs="String">
                 <value>0</value>
+            </setting>
+            <setting name="Sourcepath" serializeAs="String">
+                <value>...\Output\</value>
+            </setting>
+            <setting name="Shapepath" serializeAs="String">
+                <value />
             </setting>
         </ClipGeo.My.MySettings>
     </userSettings>
