removed unnecessary comments
- translated other comments to english,
- added more exact Haversine formula for distance between two coordinates calculations, implementation yet outstanding

--- a/app.config
+++ b/app.config
@@ -11,9 +11,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
   </startup>
   <runtime>
-    <!--Alex, Runtime Array-Size increase for 64bit-->
+    <!-- Runtime Array-Size increase for 64bit - necessary for some Hashsets that can get really large (> 500 Million entries)-->
   <gcAllowVeryLargeObjects enabled="true" />
-    <!--Alex, Disable FlickrNet Cache-->
+    <!-- Disable FlickrNet Cache - helps prevent some file-is-locked-errors-->
     <flickrNet cacheDisabled="true">
     </flickrNet>
     <FlickrNet cacheDisabled="true">
