--- a/app.config
+++ b/app.config
@@ -64,7 +64,7 @@
                 <value>0</value>
             </setting>
             <setting name="Sourcepath" serializeAs="String">
-                <value>...\Output\</value>
+                <value>...\01_Input\</value>
             </setting>
             <setting name="Shapepath" serializeAs="String">
                 <value />
