Added AutoZoom to Preview Images
- also added .NETFramework Default to 4.0 for Singleton Error

--- a/app.config
+++ b/app.config
@@ -8,7 +8,8 @@
     </sectionGroup>
   </configSections>
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
+    <!-- <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>-->
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
   <runtime>
     <!-- Runtime Array-Size increase for 64bit - necessary for some Hashsets that can get really large (> 500 Million entries)-->
